--- a/sveltebase/src/styles/tailwind.css
+++ b/sveltebase/src/styles/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    h1 {
+        @apply font-semibold text-4xl text-gray-700 mb-4;
+    }
+}
