--- a/sveltebase/src/styles/tailwind.css
+++ b/sveltebase/src/styles/tailwind.css
@@ -1,16 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer components {
     h1 {
         @apply font-semibold text-4xl text-gray-700 mb-4;
     }
-
-     /* Forms */
-
+    /* Forms */
     /* Global */
-
     [type='text'],
     [type='email'],
     [type='url'],
@@ -25,17 +21,23 @@
     [type='week'],
     [multiple],
     textarea,
-    select{
-        @apply w-full border-gray-300 rounded-lg shadow-sm text-gray-700 text-sm font-mono focus:border-indigo-500 focus:ring-indigo-500;
+    select {
+        @apply w-full border-gray-300 rounded-lg shadow-sm text-gray-700 text-sm font-mono focus: border-indigo-500 focus: ring-indigo-500;
     }
-
     [type='checkbox'],
-    [type='radio']{
-        @apply rounded border-gray-300 text-indigo-600 focus:ring-indigo-500;
+    [type='radio'] {
+        @apply rounded border-gray-300 text-indigo-600 focus: ring-indigo-500;
     }
-
-    label{
+    label {
         @apply text-gray-700 font-semibold mr-2;
     }
-
+    #menu {
+        @apply bg-yellow-200;
+    }
+    main {
+        @apply bg-blue-200;
+    }
+    h1 {
+        @apply bg-red-600;
+    }
 }
